force-app/main/default/objects/Contact/fields/CitizenIdentityCard__c.field-meta.xml
<CustomField>
    <fullName>CitizenIdentityCard__c</fullName>
    <label>Citizen Identity Card</label>
    <length>50</length>
    <type>Text</type>
</CustomField>