force-app/main/default/objects/Contact/fields/Kakao_ID__c.field-meta.xml
<CustomField>
    <fullName>Kakao_ID__c</fullName>
    <label>Kakao ID</label>
    <type>Url</type>
</CustomField>