force-app/main/default/objects/Contact/fields/Linkedln_ID__c.field-meta.xml
<CustomField>
    <fullName>Linkedln_ID__c</fullName>
    <label>Linkedln ID</label>
    <type>Url</type>
</CustomField>