force-app/main/default/objects/Contact/fields/SkypeID__c.field-meta.xml
<CustomField>
    <fullName>SkypeID__c</fullName>
    <label>Skype ID</label>
    <type>Url</type>
</CustomField>