force-app/main/default/objects/Contact/fields/Wechat_ID__c.field-meta.xml
<CustomField>
    <fullName>Wechat_ID__c</fullName>
    <label>Wechat ID</label>
    <type>Url</type>
</CustomField>