force-app/main/default/objects/Contact/fields/WhatsApp_ID__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_ID__c</fullName>
    <label>WhatsApp ID</label>
    <type>Url</type>
</CustomField>