force-app/main/default/objects/Contact/fields/Zalo_ID__c.field-meta.xml
<CustomField>
    <fullName>Zalo_ID__c</fullName>
    <label>Zalo ID</label>
    <type>Url</type>
</CustomField>